Backend Parte 9: Creación del Modelo de Grupo de Trabajo
