# backend/src/app.js
@@ -21,6 +21,7 @@ swaggerDocs(app);
 app.use('/api/usuarios', require('./routes/UsuarioRoutes'));
 app.use('/api/assets', require('./routes/AssetRoutes'));
 app.use('/api/mensajes', require('./routes/MensajeRoutes'));
+app.use('/api/grupos', require('./routes/GrupoRoutes'));
 
 const PORT = process.env.PORT || 5000;
 app.listen(PORT, () => {
